2010-04-07  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * doc/geany.txt, doc/geany.html:
   Improve wording.
 * src/build.c, src/msgwindow.c:
   Fix disabled compiler message tracking if using indicators to
   show build errors is disabled (closes #2982834).


2010-04-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * scintilla/Editor.cxx:
   Backport fix from Scintilla CVS to fix using SCI_GETSELECTIONSTART
   and SCI_GETSELECTIONEND with rectangular selections. This fixes
   replacing in a rectangular selection.


2010-04-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/filetypes.c:
   Re-detect any document filetypes set to None after reloading
   filetype extensions (closes #2979661).
 * src/editor.c:
   Fix showing '...' item last instead of first for document word
   completion.


2010-04-05  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetypes.perl:
   Adjust Perl Compile command to use the -c command
   line option to perform a syntax check instead of using the
   deprecated ByteCompile module.
   Add error_regex to parse error messages and warnings when performing
   syntax checks on Perl files.


2010-04-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c, src/keybindings.h, doc/plugins.dox:
   Add API docs for keybinding enums.
 * src/notebook.c, doc/geany.txt, doc/geany.html:
   Make Ctrl-click on any notebook tab switch to the last used
   document.


2010-04-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/geanymenubuttonaction.c, src/geanymenubuttonaction.h,
   src/geanyentryaction.c, src/geanyentryaction.h,
   src/geanywraplabel.c:
   Cache G_TYPE_INSTANCE_GET_PRIVATE() result when initializing an
   object for efficiency.


2010-03-31  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/classbuilder.c:
   Beep if the user hasn't entered a class name on pressing OK.
 * src/search.c:
   Fix replacing '^' regex.