@@ -1,3 +1,10 @@
+2010-04-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/editor.c:
+   Refactor snippets_complete_constructs().
+   Remove an unnecessary TODO.
+
+
 2010-04-07  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * doc/geany.txt, doc/geany.html:
